# hallizkeer

./: .gitignore  I2C.hs  LICENSE  Main.hs  README.md  hallizkeer.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: I2C.hs  I2CLow.hs  Logger.hs  Main.hs
src/I2C/: C.hs
