name:                hallizkeer
version:             0.9.0.0
License:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable hallizkeer
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base
                     , transformers
                     , bytestring
                     , hsyslog
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

